Components helpers where appearing beneath the menu... fixed their z-index

--- a/public/css/menu-layout.css
+++ b/public/css/menu-layout.css
@@ -10,7 +10,7 @@
     border-top-right-radius: 16px;
     border-bottom-right-radius: 16px;
     padding-bottom:18px;
-    z-index:30000009;
+    z-index:30000001;
 }
 
 .flexly-main-bar-opened {
